vlib/v/checker/tests/fn_mismatch_option_return_err.vv
import time

fn foo() time.Duration {
	return ?time.Duration(0)
}

println(foo())
